反馈完成，个人资料全部完成

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -48,3 +48,10 @@
   margin-right: 10px;
   vertical-align: text-bottom;
 }
+
+.com-hrline{
+  border: none;
+  background-color: #ccc;
+  height: 1px;
+  margin: 0 10px;
+}
