--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -55,3 +55,15 @@
   height: 1px;
   margin: 0 10px;
 }
+
+.com-fillTitle{
+  text-indent: 20px;
+  font-size: 14px;
+  line-height: 40px;
+  background-color: @theme;
+  color: white;
+}
+
+.com-theme{
+  background-color: @theme;
+}
