--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,3 +1,14 @@
 // 全局变量
 
 @theme: #03A9F4;
+@danger: red;
+
+// 全局类
+
+.color-theme-bg{
+  background-color: @theme;
+}
+
+.color-danger-bg{
+  background-color: @danger;
+}
