角色切换home变化 & home限制 & 路由限制 完成

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,5 +1,6 @@
 // vux组件样式
 
+@theme-color: @theme;
 @header-background-color: @theme;
 @button-default-bg-color: @theme;
 @button-default-font-color: white;
