--- a/src/styles/trim.less
+++ b/src/styles/trim.less
@@ -6,3 +6,15 @@
     margin-top: 0;
   }
 }
+
+// 长actionsheet可滚动
+.weui-actionsheet{
+  height: 80%;
+  overflow: auto;
+}
+
+.weui-actionsheet__menu{
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
