--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -125,3 +125,10 @@
 .com-xicon-gray{
   fill: #ccc;
 }
+
+// 主要用于清除第一个group的上外边距
+.com-group-noMarginTop{
+  > .weui-cells.vux-no-group-title{
+    margin-top: 0;
+  }
+}
