--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -132,3 +132,13 @@
     margin-top: 0;
   }
 }
+
+.com-modal{
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 110;
+}
