--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -133,6 +133,7 @@
   }
 }
 
+// 模态框
 .com-modal{
   width: 100%;
   height: 100%;
@@ -141,4 +142,19 @@
   top: 0;
   left: 0;
   z-index: 110;
+}
+
+// 无数据遮罩
+.com-noData{
+  position: fixed;
+  top: 46px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #666;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eee;  
 }
